# pyramid_dogpile_cache2

./: .coveragerc  .pre-commit-config.yaml  .travis.yml  CHANGES.txt  HACKING.rst  README.rst  pyproject.toml  pytest.ini  setup.py  tox.ini
changelog/: beaker.change  settings.change
src/pyramid_dogpile_cache2/: __init__.py  cache.py  pylibmc.py  settings.py
src/pyramid_dogpile_cache2/tests/: conftest.py  test_cache.py  test_cache_py3.py  test_configuration.py
